# WebGPU-with-Cpp

./: .gitignore  .gitlgnore  CMakeLists.txt  README.md  main.cpp  main_c.c
assets/monsterfrog/: base.json  extra_ordinary.txt  extra_ordinary0.txt  extra_ordinary1.txt  extra_ordinary2.txt  extra_ordinary3.txt  extra_ordinary4.txt  extra_ordinary6.txt  extra_ordinary7.txt  extra_ordinary8.txt  patch.txt
glfw3webgpu/: CMakeLists.txt  glfw3webgpu.c  glfw3webgpu.h
src/: Application.cpp  Application.h  Application2.cpp  createFVertices.cpp  createFvertices.h  webgpu-utils.cpp  webgpu-utils.h
src/shaders/: anime.wgsl  edge.wgsl  extraordinary.wgsl  face.wgsl  patch.wgsl  vertex.wgsl  xyz.wgsl
temp/: pipelines.js
